--- a/style.css
+++ b/style.css
@@ -121,11 +121,12 @@ nav ul li a:hover {
 .about .row .image {
   width: 100%;
   flex: 1 1 45rem;
+  object-fit: cover;
 }
 .about .row .image img {
   width: 100%;
-  height: 750px;
-  border-radius: 2rem;
+  height: 700px;
+  object-fit: cover;
 }
 .about .row .content {
   flex: 1 1 45rem;
